2004-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Double-check that Ghostscript
	produced an output file since sometimes it reports success after
	it has spewed an error message and has produced no output.

2004-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanEncode2Image): Avoid out of bounds
	array access.
	* magick/studio.h (_FILE_OFFSET_BITS): Fix _FILE_OFFSET_BITS
	#ifdef to avoid warnings when it is not defined.

2004-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix minor shell syntax error (used ==).

2004-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Merged in updates from 1.1 release branch.
	* version.sh (PACKAGE_VERSION): Release version 1.1.
	(PACKAGE_VERSION): Next major release will be 1.1.  Bump library
	versions since we anticipate adding interfaces.
	* magick/studio.h: Disabled use of Windows message lookups
	entirely since this doesn't seem to work for programs.  It
	probably only works for DLLs like ImageMagickObject.
	* magick/delegate.c (ListDelegateInfo): Don't get stuck in a loop
	if fprintf() returns zero.

2004-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/*/*.bat: Add .exe to exe file names in order to
	ensure that the executable is executed rather than something else
	(such as a batch script).
	* magick/locale.c: Only use Windows resource message lookup for
	the DLL build since it doesn't seem to work for static
	executables.
	* magick/utility.c (SetClientPath): Ensure that client path is
	null terminated.
	(SetClientFilename): Initialize default client filename to ""
	rather than "gm.exe" and ensure that filename is null terminated.
	(SetClientName): Ensure that client path is null terminated.
	* magick/blob.c (GetConfigureBlob): Enable logging the load of
	log.mgk
	* magick/log.c: Re-designed logging initialization in order to
	avoid the "chicken and the egg" snafu.  This allows logging the