@@ -56,6 +56,8 @@
 2004-04-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/compress.c (Ascii85Tuple): Add casts to reduce compiler
+        warnings, and maybe even fix a bug.
   <LI> coders/pdf.c (ReadPDFImage): Double-check that Ghostscript
         produced an output file since sometimes it reports success after
         it has spewed an error message and has produced no output.
