@@ -1,5 +1,7 @@
 2004-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/compress.c (Ascii85Tuple): Add casts to reduce compiler
+	warnings, and maybe even fix a bug.
 	* coders/pdf.c (ReadPDFImage): Double-check that Ghostscript
 	produced an output file since sometimes it reports success after
 	it has spewed an error message and has produced no output.
